--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
   "scripts": {
     "test": "jest",
     "start": "tsx watch ./src/index.ts",
-    "build": "tsc --project tsconfig.build.json"
+    "generate": "tsx ./src/generateBoilerplateCli/index.ts",
+    "build": "tsc"
   },
   "author": "Thiago Fukuyama Marcilli",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@clack/prompts": "^0.7.0"
   }
 }
